# MoLab

./: .gitignore  404.html  Justfile  LICENSE  Makefile  README.md  docker-compose.yaml  globals.gd  index.html  mkdocs.yml  objects.inv  project.godot  sitemap.xml
backend/: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
backend/data_loaders/humanml/common/: skeleton.py
backend/molab_backend/: main.py
backend/notebooks/: c3d_tests.ipynb  fk_convention.ipynb  why_packed_motion_needs_zyx.ipynb
backend/sample/: dummy.bvh
backend/serve/: inference_worker.py
backend/serve/fastapi/: serve.py
backend/serve/fastapi_gateway/: gateway.py  worker.py
backend/serve/ray/: serve.py
backend/zmq/: worker.py
concept/: index.html
datatypes/: bvh_track.gd  (+4 more)
models/condmdi/: .dockerignore  .gitignore  Dockerfile  README.md  environment.yaml  pyproject.toml  requirements.txt  websocket_worker.py
models/condmdi/convert/joints2bvh/: README.md
models/condmdi/data_loaders/humanml/common/: quaternion.py  skeleton_bak.py
models/condmdi/data_loaders/humanml/scripts/: motion_process.py
models/condmdi/dataset/HumanML3D/: Mean_abs_3d.npy  Std_abs_3d.npy
models/condmdi/model/: mdm.py
models/condmdi/molab_condmdi/: inference_worker.py  websocket_worker.py
models/condmdi/molab_condmdi/configs/: card.py  data.py  model.py
models/condmdi/molab_condmdi/convert/joints2bvh/: AnimationStructure.py  BVH.py  InverseKinematics.py  joints2bvh.py  remove_fs.py
models/condmdi/molab_condmdi/data_loaders/: get_data.py  tensors.py
models/condmdi/molab_condmdi/dataset/HumanML3D_abs/: cal_mean_variance.ipynb  motion_representation.ipynb
models/condmdi/molab_condmdi/diffusion/: fp16_util.py  gaussian_diffusion.py  logger.py  respace.py
models/condmdi/molab_condmdi/eval/: eval_humanact12_uestc.py  eval_humanml.py  eval_humanml_condition.py  eval_humanml_condmdi.py
models/condmdi/molab_condmdi/eval/a2m/: gru_eval.py  stgcn_eval.py
models/condmdi/molab_condmdi/eval/unconstrained/: evaluate.py
models/condmdi/molab_condmdi/model/: cfg_sampler.py  mdm.py  mdm_dit.py  mdm_unet.py  rotation2xyz.py  smpl.py
models/condmdi/molab_condmdi/notebooks/: bvh2joints.ipynb  bvh_from_rotation_feats.ipynb  compare_mean_std.ipynb  dataset_size.ipynb  fk_convention.ipynb  keyframe_mask.ipynb  motion_packing.ipynb  new_joint_vecs_to_bvh.ipynb  new_joints_to_bvh.ipynb  pos2vel2pos.ipynb  results.ipynb  torchinfo.ipynb  why_packed_motion_needs_zyx.ipynb
models/condmdi/molab_condmdi/prepare/: download_glove.sh  download_pretrained.sh
models/condmdi/molab_condmdi/sample/: conditional_synthesis.py  custom.py  edit.py  synthesize.py
models/condmdi/molab_condmdi/sample/gmd/: condition.py  generate.py
models/condmdi/molab_condmdi/train/: train_condmdi.py  training_loop.py
models/condmdi/molab_condmdi/utils/: editing_util.py  fixseed.py  generation_template.py  misc.py  model_util.py  output_util.py  parser_util.py  rotation_conversions.py
models/condmdi/molab_condmdi/visualize/: render_mesh.py  simplify_loc2rot.py  vis_utils.py
models/condmdi/molab_condmdi/visualize/joints2smpl/: fit_seq.py
models/condmdi/tests/: test_inference_worker.py
(+428 files in other folders)
